Make changes (logging)

--- a/resultats-test.ipynb
+++ b/resultats-test.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# **Flappy Bird : Test de différents paramètres d'apprentissage**\n",
     "\n",
-    "Les tests ont été réalisés pour l'environnement Flappy Bird (https://github.com/davHub/flappy-bird-env.git) dans le cas simple flappyBird_env"
+    "Les tests ont été réalisés pour l'environnement Flappy Bird (https://github.com/davHub/flappy-bird-env.git) dans le cas où l'observation est l'image entière $\\Rightarrow$ flappyBird_cnn"
    ]
   },
   {
@@ -16,16 +16,14 @@
     "## Détail de l'environnement\n",
     "Description FlappyBird_env: \n",
     "- 1 bird \n",
-    "- Observation : $\\Delta$y\n",
+    "- Observation : image 84 x 84 x 1 (grayscale from -1 to 1)\n",
     "- Reward : +1 à chaque step, 0 si done\n",
     "\n",
     "## Paramétrage standard\n",
     "Quand rien n'est spécifié:\n",
     "\n",
-    "- Architecture: Dense(10) - Dropout(0.2) - Tanh - Dense(8) - Tanh - Dense(2)\n",
-    "- Experience Replay : Prioritized ($\\alpha = 0.6,\\ \\ \\beta=0.4\\ \\ \\epsilon=1.e-6$)\n",
-    "- Learning rate : $\\alpha=0.00025$\n",
-    "- Gamma : $\\gamma=0.9$"
+    "- Architecture: 8x8_Conv2D(32) - ReLU - 4x4_Conv2D(64) - ReLU - 3x3_Conv2D(64) - ReLU - Flatten - Dense(512) - ReLU - Dense(2)\n",
+    "- Gamma : $\\gamma=0.975$"
    ]
   },
   {
@@ -33,220 +31,121 @@
    "metadata": {},
    "source": [
     "### **Sommaire**\n",
-    "1. [Test Exp Replay](#test-ExpReplay)<br>\n",
+    "1. [Test 1 : Best model ~60 points en moyenne](#test-1)<br>\n",
+    "    1.1 : [Re-entraînement : Best model ~80 points en moyenne](#retrain1)<br>\n",
+    "    \n",
+    "2. [Test 2 : Best model ~12 points en moyenne](#test-2)<br>\n",
     "\n",
-    "2. [Test Greedy-$\\epsilon$](#test-greedyEps)<br>\n",
-    "    2.1 [Test 1 : Full Exploration](#test-greedyExpl)<br>\n",
-    "    2.2 [Test 2 : Mixte](#test-greedyMixte)<br>\n",
-    "    2.3 [Test 3 : Full Exploration](#test-greedyExploit)<br>\n",
-    "\n",
-    "3. [Test Learning Rate](#test-lr)<br>\n",
-    "    3.1 [Test 1 : Comparaison $\\alpha = 0.00025$ vs $\\alpha = 0.001$](#test-lr-vs)<br>\n"
+    "3. [Comparaison](#comp)<br>\n",
+    "    3.1 [Comparaison Test 1 vs Test 2](#comp1vs2)<br>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"test-ExpReplay\"></a>\n",
-    "## **1. Test Exp Replay (SimpleBuffer vs Prioritized)**\n",
+    "<a id=\"test-1\"></a>\n",
+    "## **1. Test 1 : ~ 60 points**\n",
     "\n",
     "### Paramétrage global\n",
     "\n",
-    "$\\alpha$ = 0.001 | $\\gamma$ = 0.9  |  $\\epsilon_{deb}$=1.0  |   $\\epsilon_{fin}$= 0.1  |  $batch\\_size$ = 32   |   $memory\\_size$ = 10000    |    $C$ = 200\n",
+    "> $\\alpha$ = 0.00025 | $\\gamma$ = 0.975  |  $\\epsilon_{deb}$=1.0  |   $\\epsilon_{fin}$= 0.1  |  $batch\\_size$ = 32   |   $memory\\_size$ = 10 000    |    $C$ = 200  |  $num\\_steps$ = 2 000 000\n",
+    " Experience Replay : Simple Buffer\n",
     "\n",
-    "num_episodes = 800"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"test-greedyEps\"></a>\n",
-    "## **2. Tests greedy-$\\epsilon$ exploration**\n",
-    "\n",
-    "Les tests ont été réalisés avec les hyperparamètres suivants :\n",
-    "\n",
-    "> $\\alpha$ = 0.00025 | $\\gamma$ = 0.9   |  $batch\\_size$ = 32   |   $memory\\_size$ = 10000    |    $C$ = 200  |   num_episodes = 1000\n",
-    "\n",
-    "L'exploration est linéaire durant les 1000 épisodes entre $\\epsilon_{deb}$ et $\\epsilon_{fin}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"test-greedyExpl\"></a>\n",
-    "### **Test 1 : Quasi Full exploration**\n",
-    "\n",
-    "### Paramétrage global\n",
-    "\n",
-    "> $\\alpha$ = 0.00025 | $\\gamma$ = 0.9  |  $\\epsilon_{deb}$=1.0  |   $\\epsilon_{fin}$= 0.8  |  $batch\\_size$ = 32   |   $memory\\_size$ = 10000    |    $C$ = 200  |   num_episodes = 1000\n",
     "\n",
     "### Résultats\n",
     "\n",
-    "Durée apprentissage : <em style='color:red'> 2h25 </em>\n",
+    "Durée apprentissage : <em style='color:red'> 6h23 </em>\n",
     "\n",
-    "![alt text](plot_img/Value-t1.gif \"Value\")\n",
-    "![alt text](plot_img/QValue-t1.gif \"Q-Value\")\n",
-    "\n",
-    "> **-> Démarrage entraînement (1 épisode)**\n",
-    "> <br><em style='color:red'> A l'initial, l'aspect de la courbe est proche de la fonction TanH (couche d'activation choisie) </em>\n",
-    "\n",
-    " ![alt text](plot_img/Value-model-0.png \"Value after no epochs\")\n",
-    " ![alt text](plot_img/Qvalue-model-0.png \"Q-value after no epochs\")\n",
-    "\n",
-    "\n",
-    "> **-> Début entraînement (100 épisodes)** -- Stratégie quasi parfaite\n",
-    "\n",
-    "![alt text](plot_img/Value-model-100.png \"Value after 100 epochs\")\n",
-    "![alt text](plot_img/Qvalue-model-100.png \"Q-value after 100 epochs\")\n",
-    "\n",
-    "\n",
-    "> **-> Milieu entraînement (500 épisodes)**\n",
-    "\n",
-    "![alt text](plot_img/Value-model-500.png \"Value after 500 epochs\")\n",
-    "![alt text](plot_img/Qvalue-model-500.png \"Q-value after 500 epochs\")\n",
-    "\n",
-    "> **-> Fin entraînement (1000 épisodes)**\n",
-    "\n",
-    "![alt text](plot_img/Value-model-1000.png \"Value after 1000 epochs\")\n",
-    "![alt text](plot_img/Qvalue-model-1000.png \"Q-value after 1000 epochs\")\n",
+    "![alt text](plot_img/Qvalue-full-image1.gif \"Q-Value\")\n",
     "\n",
     "### Interprétation/Conclusion\n",
     "\n",
+    "<a id=\"retrain1\"></a>\n",
+    "### **1.1 Retrain : ~ 80 points**\n",
     "\n",
-    "Une bonne stratégie (celle du Bot) est trouvée extrêmement rapidement (< 100 épisodes). De plus, avec seulement la phase d'exploration (de 100\\% à 80\\% d'exploration), l'algo comprend la mécanique de ce système.\n",
-    "La fonction de valeur quand à elle met un certain temps à converger. Même si la convergence ne semble pas terminée, après 1000 épisodes on distingue un applatissement surprenant de la fonction de valeur autour de 0. La largeur de l'applatissement est environ égale à : $$min\\_size\\_ouv - \\frac{epaisseur\\_bird}{2} = 60 - 7.5 \\approx 50 $$\n",
-    "En d'autre termes, l'espérance à long terme dans cet intervalle est identique. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"test-greedyMixte\"></a>\n",
-    "### **Test 2 : From full exploration to few exploration**\n",
+    "Re-apprentissage à partir du dernier modèle enregistré (step 2M).\n",
     "\n",
-    "### Paramétrage global (Idem sauf $\\epsilon$)\n",
+    "### Paramétrage global\n",
     "\n",
-    "> $\\alpha$ = 0.001 | $\\gamma$ = 0.9  |  $\\epsilon_{deb}$=1.0  |   $\\epsilon_{fin}$= 0.1  |  $batch\\_size$ = 32   |   $memory\\_size$ = 10000    |    $C$ = 200  |   num_episodes = 1000\n",
+    "> $\\alpha$ = 0.00025 | $\\gamma$ = 0.975  |  $\\epsilon_{deb}$=0.1  |   $\\epsilon_{fin}$= 0.01  |  $batch\\_size$ = 32   |   $memory\\_size$ = 10 000    |    $C$ = 200  |  $num\\_steps$ = 1 000 000\n",
     "\n",
     "### Résultats\n",
     "\n",
-    "Durée apprentissage : <em style='color:red'> 5h40 </em>\n",
+    "Durée apprentissage : <em style='color:red'> 3h24 </em>\n",
     "\n",
-    "![alt text](plot_img/Value-t2.gif \"Value after no epochs\")\n",
-    "![alt text](plot_img/QValue-t2.gif \"Value after no epochs\")\n",
+    "![alt text](plot_img/Qvalue-full-image2.gif \"Q-Value\")\n",
+    "![alt text](plot_img/Qvalue-full-image2.gif \"Q-Value\")\n",
     "\n",
-    "<!--\n",
-    "> **-> Démarrage entraînement (1 épisode)**\n",
     "\n",
-    " ![alt text](plot_img/Value-t2-Eps-0.png \"Value after no epochs\")\n",
-    " ![alt text](plot_img/Qvalue-t2-Eps-0.png \"Q-value after no epochs\")\n",
-    "-->\n",
+    "**GradCAM & ExtractActivations**\n",
     "\n",
-    "> **-> Début entraînement (100 épisodes)** \n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_1/extractActiv_test1-2M.gif \"Extract Activation 2 millions\")\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_1/gradCam_test1-2M.gif \"GradCAM 2 millions\")\n",
+    "### Interprétation/Conclusion\n",
     "\n",
-    "![alt text](plot_img/Value-t2-Eps-100.png \"Value after 100 epochs\")\n",
-    "![alt text](plot_img/Qvalue-t2-Eps-100.png \"Q-value after 100 epochs\")\n",
-    "\n",
-    "<!--\n",
-    "> **-> Milieu 1 entraînement (350 épisodes)** \n",
-    "\n",
-    "![alt text](plot_img/Value-t2-Eps-350.png \"Value after 350 epochs\")\n",
-    "![alt text](plot_img/Qvalue-t2-Eps-350.png \"Q-value after 350 epochs\")\n",
-    "\n",
-    "> **-> Milieu 2 entraînement (500 épisodes)** \n",
-    "\n",
-    "![alt text](plot_img/Value-t2-Eps-500.png \"Value after 500 epochs\")\n",
-    "![alt text](plot_img/Qvalue-t2-Eps-500.png \"Q-value after 500 epochs\")\n",
-    "\n",
-    "> **-> Fin entraînement (1000 épisodes)**\n",
-    "\n",
-    "![alt text](plot_img/Value-t2-Eps-1000.png \"Value after 1000 epochs\")\n",
-    "![alt text](plot_img/Qvalue-t2-Eps-1000.png \"Q-value after 1000 epochs\")\n",
-    "-->\n",
-    "\n",
-    "### Interprétation / Conlusion"
+    "De très bons résultats. Le paramètre $\\gamma$ a été choisi de tel sorte qu'il que Flappy voit plus loin que la prochaine plateforme (entre 2 et 3 plateformes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"test-greedyExploit\"></a>\n",
-    "### **Test 3 : Only few exploration**\n",
+    "<a id=\"test-2\"></a>\n",
+    "## **2. Tests 2 : ~10 points**\n",
     "\n",
-    "### Paramétrage global (Idem sauf $\\epsilon$)\n",
+    "### Paramétrage global\n",
     "\n",
-    "> $\\alpha$ = 0.00025 | $\\gamma$ = 0.9  |  $\\epsilon_{deb}$=0.1  |   $\\epsilon_{fin}$= 0.01  |  $batch\\_size$ = 32   |   $memory\\_size$ = 10000    |    $C$ = 200  |   num_episodes = 1000\n",
+    "> $\\alpha$ = 0.001 | $\\gamma$ = 0.975   |  $\\epsilon_{deb}$=1.0  |   $\\epsilon_{fin}$= 0.1  |  $batch\\_size$ = 32   |   $memory\\_size$ = 50 000    |    $C$ = 10 000  |   $num\\_steps$ = 6 000 000\n",
+    "\\\\ Experience Replay : Prioritized ($\\alpha = 0.6,\\ \\ \\beta=0.4\\ \\ \\epsilon=1.e-6$)\n",
     "\n",
     "### Résultats\n",
     "\n",
-    "![alt text](plot_img/Value-t3.gif \"Value\")\n",
-    "![alt text](plot_img/QValue-t3.gif \"QValue\")\n",
+    "Durée apprentissage : <em style='color:red'> 23h56 </em>\n",
     "\n",
-    "<!--\n",
-    "> **-> Démarrage entraînement (1 épisode)**\n",
+    "![alt text](plot_img/Value-full-image3.gif \"Value\")\n",
+    "![alt text](plot_img/Qvalue-full-image3.gif \"Q-Value\")\n",
     "\n",
-    " ![alt text](plot_img/Value-lowEps-0.png \"Value after no epochs\")\n",
-    " ![alt text](plot_img/Qvalue-lowEps-0.png \"Q-value after no epochs\")\n",
     "\n",
-    "> **-> Début entraînement (100 épisodes)** \n",
+    "*Explication de la première couche :*\n",
     "\n",
-    "![alt text](plot_img/Value-lowEps-100.png \"Value after 100 epochs\")\n",
-    "![alt text](plot_img/Qvalue-lowEps-100.png \"Q-value after 100 epochs\")\n",
+    "**Grad CAM** de la 1ère couche après 200 000, 3M et 6M de steps :\n",
     "\n",
-    "> **-> Fin entraînement (250 épisodes)**\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_2/gradCam_test2-200m.gif \"GradCAM 200 000\")\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_2/gradCam_test2-3M.gif \"GradCAM 3 millions\")\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_2/gradCam_test2-6M.gif \"GradCAM 6 millions\")\n",
     "\n",
-    "![alt text](plot_img/Value-lowEps-250.png \"Value after 250 epochs\")\n",
-    "![alt text](plot_img/Qvalue-lowEps-250.png \"Q-value after 250 epochs\")\n",
+    "**Activation extraction** de la 1ère couche après 200 000, 3M et 6M de steps :\n",
     "\n",
-    "-->\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_2/extractActiv_test2-200m.gif \"Extract Activation 200 000\")\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_2/extractActiv_test2-3M.gif \"Extract Activation 3 millions\")\n",
+    "![alt_text](plot_img/tf_explain/Flappy_Test_2/extractActiv_test2-6M.gif \"Extract Activation 6 millions\")\n",
     "\n",
-    "### Interprétation / Conlusion\n",
+    "Ici, on observe ce que chacun des 32 filtres de la première couche filtre. Le résultat après 3M de steps est plutôt bien mais pas celui après 6M de steps. En effet seulement quelques filtres semblent donner une quelconque information. Cela est peut-être du à une sorte d'over-fitting (Il faudrait réessayer en ajoutant du Dropout).\n",
     "\n",
-    "La réalisation d'un épisode est plus long. Ceci est dû à la plus forte utilisation de l'exploitation du modèle (qui nécessitee un passage entier dans le réseau, plus coûteux en calcul qu'un simple random) en dépit de l'exploration."
+    "### Interprétation/Conclusion\n",
+    "On remarque une amélioration jusqu'à un peu plus de la moitié de l'apprentissage. Notamment les résultats du réseau en ce qui concerne la localisation des zones d'importances de l'image (gradCAM). Après un certain moment cependant, les résultats deviennent de moins en moins bons.\n",
+    "Tout de même, les résultats de cet apprentissage sont très médiocre. Deux possibilités peuvent en être la cause : le prioritized replay ou le paramètre C qui est trop grand."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparaison apprentissage des 3 tests : \n",
+    "<a id=\"comp\"></a>\n",
+    "##  **3. Comparaison**\n",
     "\n",
-    "![alt text](plot_img/vs/eps-loss.png \"Comparaison Loss\")\n",
-    "![alt text](plot_img/vs/eps-rew.png \"Comparaison Rewards\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"test-lr\"></a>\n",
-    "## **2. Tests Learning Rate**\n",
+    "Comparaison des apprentissages de plusieurs tests.\n",
     "\n",
-    "Les tests ont été réalisés avec les hyperparamètres suivants :\n",
+    "<a id=\"comp1vs2\"></a>\n",
+    "###  **3.1 Comparaison Test 1 vs Test 2**\n",
+    "![alt text](plot_img/vs/1vs2-eps-value.png \"Value Comparison\")\n",
+    "![alt text](plot_img/vs/1vs2-eps-rew.png \"Reward Comparison\")\n",
+    "![alt text](plot_img/vs/1vs2-eps-loss.png \"Loss Comparison\")\n",
     "\n",
-    "> $\\gamma$ = 0.9   |  $\\epsilon_{deb}$=1.0  |   $\\epsilon_{fin}$= 0.1  |   $batch\\_size$ = 32   |   $memory\\_size$ = 10000    |    $C$ = 200  |   num_episodes = 1000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"test-lr-vs\"></a>\n",
-    "### **Test 1 : Comparaison $\\alpha$ =  0.001 vs $\\alpha$ = 0.00025**\n",
+    "### Interprétation/Conclusion\n",
     "\n",
-    "### Résultats\n",
-    "\n",
-    "![alt text](plot_img/vs/loss-lr-000025vs0001.png \"Comparaison Loss\")\n",
-    "![alt text](plot_img/vs/rew-lr-000025vs0001.png \"Comparaison Rewards\")\n",
-    "\n",
-    "### Interprétation / Conlusion\n",
-    "\n",
-    "La valeure $\\alpha = 0.00025$ semble donner de meilleurs résultats que $\\alpha = 0.001$ car la reward est plus importante dès de début."
+    "Pour la fonction de valeur, le test 1 va bien plus rapidement vers une valeur très proche de la valeur espérée. Il produit également de meilleurs résultats pour une raison que je n'esplique pas encore (peut-être le paramètre C)."
    ]
   }
  ],
